# bizflow-crm-backend

./: README.md  pyproject.toml  setup.py
bizflow_crm_backend/: hooks.py  setup.py
bizflow_crm_backend/bizflow_crm_backend/: modules.txt
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_customer/: bizflow_customer.json  bizflow_customer.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_gst_invoice/: bizflow_gst_invoice.json  bizflow_gst_invoice.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_gst_invoice_item/: bizflow_gst_invoice_item.json  bizflow_gst_invoice_item.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_item/: bizflow_item.json  bizflow_item.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_quotation/: bizflow_quotation.json  bizflow_quotation.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_quotation_item/: bizflow_quotation_item.json  bizflow_quotation_item.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_stock_entry/: bizflow_stock_entry.json  bizflow_stock_entry.py
bizflow_crm_backend/bizflow_crm_backend/doctype/bizflow_tenant/: bizflow_tenant.json  bizflow_tenant.py
