[project]
name = "bizflow_crm_backend"
authors = [
    { name = "Nexgen ERP Technologies", email = "info@nexgenerp.com"}
]
description = "BizFlow CRM Backend"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]